--- a/style.css
+++ b/style.css
@@ -132,10 +132,93 @@ hr {
     font: normal normal 1.2rem Arial, sans-serif;
 }
 
-.row-education {
+.row {
     padding: 20px 0 20px 60px;
 }
 
-.row-education ul li{
+.education-section ul li{
     margin: 10px -1rem;
 }
+
+.skills-section {
+    width: 1000px;
+    margin: auto;
+    padding: 10px;
+    background-color: var(--color-white);
+    box-shadow:  20px 20px 10px rgba(0,0,0,.175)!important;
+    color: var(--color-dark);
+    text-align: left;
+    font: normal normal 1.2rem Arial, sans-serif;
+}
+
+
+.skills-section ul {
+    display:flex;
+    flex-wrap: wrap;
+    margin-left: 100px;
+}
+
+.skills-section li{
+    flex-basis: 50%;
+    list-style: none;
+    margin: 10px -1rem;
+    background-repeat: no-repeat;
+    background-size: 70px;
+    background-position: left center;
+    height: 80px;
+}
+
+.skills-section span {
+    font: normal bold 1.4rem Arial, sans-serif;;
+    margin-left: 100px;
+    margin-top: 20px;
+    display: inline-block;
+}
+
+.skills-html {
+    background-image: url("images/html5-without-wordmark-color.svg");
+}
+
+.skills-css {
+    background-image: url("images/css.svg");
+}
+
+.skills-js {
+    background-image: url("images/javascript-1.svg");
+}
+
+.skills-react {
+    background-image: url("images/react.svg");
+}
+
+.skills-git {
+    background-image: url("images/github-icon.svg");
+}
+
+.skills-python {
+    background-image: url("images/Python-logo-notext.svg");
+}
+
+.code-section {
+    width: 1000px;
+    margin: auto;
+    padding: 10px;
+    background-color: var(--color-white);
+    box-shadow:  20px 20px 10px rgba(0,0,0,.175);
+    color: var(--color-dark);
+    text-align: left;
+    font: normal normal 1.2rem Arial, sans-serif;
+}
+
+
+.lang-section {
+    width: 1000px;
+    margin: auto;
+    padding: 10px;
+    background-color: var(--color-white);
+    box-shadow:  20px 20px 10px rgba(0,0,0,.175);
+    color: var(--color-dark);
+    text-align: left;
+    font: normal normal 1.2rem Arial, sans-serif;
+}
+
